syntax = "proto3";

package stock;

option go_package = "github.com/Mag1cFall/magtrade/internal/grpc/stockpb";

service StockService {
  rpc GetStock(GetStockRequest) returns (GetStockResponse);
  rpc DeductStock(DeductStockRequest) returns (DeductStockResponse);
  rpc RestoreStock(RestoreStockRequest) returns (RestoreStockResponse);
  rpc InitStock(InitStockRequest) returns (InitStockResponse);
}

message GetStockRequest {
  int64 flash_sale_id = 1;
}

message GetStockResponse {
  int32 stock = 1;
  bool success = 2;
  string message = 3;
}

message DeductStockRequest {
  int64 flash_sale_id = 1;
  int64 user_id = 2;
  int32 quantity = 3;
  int32 limit = 4;
}

message DeductStockResponse {
  bool success = 1;
  int32 code = 2;
  string message = 3;
}

message RestoreStockRequest {
  int64 flash_sale_id = 1;
  int64 user_id = 2;
  int32 quantity = 3;
}

message RestoreStockResponse {
  bool success = 1;
  string message = 2;
}

message InitStockRequest {
  int64 flash_sale_id = 1;
  int32 stock = 2;
}

message InitStockResponse {
  bool success = 1;
  string message = 2;
}
